--- a/school/index.html
+++ b/school/index.html
@@ -23,11 +23,6 @@
             <a class="nav__link" href="#groups">Группы online курсов</a>
             <a class="nav__link nav__reg" href="#registration">Регистрация</a>
             <a class="nav__link" href="#contacts">Контакты</a> 
-            <div class="nav__div">
-              <a class="nav__lang" href="#">Eng</a> /
-              <a class="nav__lang" href="#">Mne</a> /
-              <a class="nav__lang" href="#"> Rus</a>
-            </div>
           </nav>
           <div class="header__logo">
             <a href="#bg1">
@@ -52,7 +47,7 @@
     <div id="about" class="about__us">
       <h1 class="title">О нас</h1>
       <div class="section">
-        <img src="img/about us/about_1.png" alt="">
+        <img src="img/about us/about_3.png" alt="">
         <div class="text">
           <p class="text__r">
            LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы разработали собственную программу для того, чтобы вы смогли изучать английский язык в понятной и интересной форме. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab. </p>
@@ -60,15 +55,18 @@
       </div><!--Section-->
       <div class="section">
         <div class="text">
-          <p class="text__l">	Учите английский язык вместе со всей семьёй. Поддержка и участие родителей - важный аспект в обучении детей. Поэтому, помимо обычных домашних заданий мы разработали творческие упражнения для совместного выполнения. Придумать сказку про домашних животных, создать аппликацию из разных геометрических фигур, прогуляться по парку и обсудить окружающий мир на английском. Вы сами вместе с детьми можете выбрать любое доступное задание и выполнить его в удобное для Вас время. Не получилось в первого раза? - Не беда, можно посоветоваться с преподавателем и попытаться ещё раз. Мы всегда рады прийти на помощь.</p>
+          <p class="text__l">		
+            В нашей команде работают преподаватели, которые специализируются в обучении английскому, как второму языку. Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др. 
+            Все наши преподаватели русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
+            </p>
         </div>
         <img src="img/about us/about_2.png" alt="">
       </div><!--Section-->
       <div class="section">
-        <img src="img/about us/about_3.png" alt="">
+        <img src="img/about us/about_1.png" alt="">
         <div class="text">
           <p class="text__r">
-            День игр - наверно, одна из любимейших традиций участников нашего клуба. Он проходит 2 раза в месяц по субботам для каждой из групп, Полтора часа викторин или настольных игр на английском языке пролетают незаметно. Даже самые стеснительные не остаются равнодушными. </p>
+	          Занятия проходят на удобной интерактивной платформе с видеосвязью. Никаких дополнительных программ на гаджет устанавливать не надо — достаточно открыть кабинет ученика в браузере.</p>
         </div>
       </div><!--Section-->
     </div><!--About Us-->
@@ -83,33 +81,28 @@
       <h1 id="groups" class="title">Группы онлайн курсов</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l">	Онлайн обучение доступно для жителей всех городов Черногории. У нас открыто 9 основных программ для студентов различных возрастов и уровней подготовки.</p><br>
+          <p class="text__l">		Онлайн обучение доступно для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем до 6 человек):</p><br>
           <p class="text__l text__ll">С русскоязычным преподавателем:</p><br>
           <ul>
             <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
             <li><p class="text__l group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
             <li><p class="text__l group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;
             </p></li>
-          <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
-        </ul>
+          <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li></ul><br>
+          <p class="text__l text__ll">	Занятия проходят 2 раза в неделю, есть утренние и вечерние группы.</p>      
         </div><!--Text-->
         <img src="img/ groups/gr_1.png" alt="">
       </div><!--Section-->
       <div class="section">
         <img src="img/ groups/gr_2.png" alt="">
       <div class="text">
-        <p class="text__r">С сербскоговорящим преподавателем:</p><br>
-        <ul>
-        <li><p class="text__r group__txt">7-11 лет - Beginner и Elementary+ уровни;</p></li>
-      <li><p class="text__r group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
-    <li><p class="text__r group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;</p></li>
-    <li><p class="text__r group__txt">18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
-        </ul><br>
+        <p class="text__r">Индивидуальные курсы с русскоязычным преподавателем открыты для всех возрастов, вне зависимости от уровня подготовки. Минимальный пакет — 10 занятий в месяц.</p><br>
+
         <p class="text__r">С носителем языка:</p><br>
         <ul>
-      <li><p class="text__r group__txt">16+ - Upper-intermediate+ уровень.</p><br></li>
+      <li><p class="text__r group__txt">От 16 лет — уровень Upper-intermediate и выше.</p><br></li>
       </ul>
-        <p class="text__r">Доступны индивидуальные занятия</p>
+        <p class="text__r">Набор на занятия в группах проходит раз в 3 месяца (в сентябре, январе, марте и июне). Запись на индивидуальные курсы открыта в любое время. Количество мест ограничено.</p>
       </div>
       </div>
     </div><!--Groups-->
@@ -125,7 +118,14 @@
       <h1 id="registration"  class="title">Регистрация</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно по этой <a class="reg" href="#" target="_blank">ссылке</a>.</p>
+          <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно здесь:
+          </p><br>
+          <div class="btn">           
+            <button class="button" type="button">Регистрация<a class="but__link" href="#" target="_blank"></a>
+            </button>
+          </div><br>
+          <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт доступное расписание групповых и индивидуальных курсов, а также инструкция по оплате.
+          </p>
         </div>
         <img src="img/registr/reg.png" alt="">
       </div><!--Section-->
@@ -152,10 +152,6 @@
       <div class="contact">
         <img class="icon" src="icons/inst.png" alt="">
         <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
-      </div><!--Contact-->
-      <div class="contact">
-        <img class="facebook" class="icon facebook" src="icons/facebook.png" alt="">
-        <a class="facebook__a" href="https://www.facebook.com/LinguaLabMne" target="_blank">LinguaLab Mne</a>
       </div><!--Contact-->
       <div class="contact whatsapp">
         <img class="icon" src="icons/whats app.png" alt="">
