--- a/school/registration/registration.html
+++ b/school/registration/registration.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="icons/LinguaLab.png">
+  <link href="style.css" rel="stylesheet">
+  <link rel="icon" href="../icons/LinguaLab.png">
   <title>Регистрация</title>
 </head>
 <body>
-  
+  <div class="box">
+    <img src="../icons/ling.png" alt="">
+    <form id="ajax-contact-form" enctype="application/x-www-form-urlencoded" method="post">
+        <div class="form-group">
+          <label for="nameFF">Имя:</label>
+          <input id="nameFF" name="nameFF" type="text" required>
+        </div>
+        <div class="form-group">
+          <label for="contactFF">E-mail:</label>
+          <input id="contactFF" name="contactFF" type="email" required>
+        </div>
+        <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
+      </form>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
