index place change

--- a/school/index.html
+++ b/school/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link href="style.css" rel="stylesheet">
+  <link href="main/style.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
           </nav>
           <div class="header__logo">
             <a href="#bg1">
-              <img src="../icons/ling.png" alt="">
+              <img src="icons/ling.png" alt="">
             </a>
           </div>
           <button class="nav-toggle" id="nav_toggle" type="button">
@@ -38,7 +38,7 @@
   </div><!--Header-->
 
   <div id="bg1">
-    <img class="bg__img" src="../img/1.png" alt="">
+    <img class="bg__img" src="img/1.png" alt="">
   </div>
 
   <!--About Us-->
@@ -46,7 +46,7 @@
     <div id="about" class="about__us">
       <h1 class="title">О нас</h1>
       <div class="section">
-        <img src="../img/about us/about_3.png" alt="">
+        <img src="img/about us/about_3.png" alt="">
         <div class="text">
           <p class="text__r">
            LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы разработали собственную программу для того, чтобы вы смогли изучать английский язык в понятной и интересной форме. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab. </p>
@@ -59,10 +59,10 @@
             Все наши преподаватели русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
             </p>
         </div>
-        <img src="../img/about us/about_2.png" alt="">
+        <img src="img/about us/about_2.png" alt="">
       </div><!--Section-->
       <div class="section">
-        <img src="../img/about us/about_1.png" alt="">
+        <img src="img/about us/about_1.png" alt="">
         <div class="text">
           <p class="text__r">
 	          Занятия проходят на удобной интерактивной платформе с видеосвязью. Никаких дополнительных программ на гаджет устанавливать не надо — достаточно открыть кабинет ученика в браузере.</p>
@@ -72,7 +72,7 @@
   </div><!--Container-->
 
   <div>
-    <img class="bg__img" src="../img/2.png" alt="">
+    <img class="bg__img" src="img/2.png" alt="">
   </div>
 
   <div class="container">
@@ -90,10 +90,10 @@
           <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li></ul><br>
           <p class="text__l text__ll">	Занятия проходят 2 раза в неделю, есть утренние и вечерние группы.</p>      
         </div><!--Text-->
-        <img src="../img/ groups/gr_1.png" alt="">
+        <img src="img/ groups/gr_1.png" alt="">
       </div><!--Section-->
       <div class="section">
-        <img src="../img/ groups/gr_2.png" alt="">
+        <img src="img/ groups/gr_2.png" alt="">
       <div class="text">
         <p class="text__r">Индивидуальные курсы с русскоязычным преподавателем открыты для всех возрастов, вне зависимости от уровня подготовки. Минимальный пакет — 10 занятий в месяц.</p><br>
 
@@ -108,7 +108,7 @@
   </div><!--Container-->
 
   <div>
-    <img class="bg__img" src="../img/3.png" alt="">
+    <img class="bg__img" src="img/3.png" alt="">
   </div>
 
   <div class="container">
@@ -126,14 +126,14 @@
           <p class="text__l text__reg">После прохождения теста, вам на электронную почту придёт доступное расписание групповых и индивидуальных курсов, а также инструкция по оплате.
           </p>
         </div>
-        <img src="../img/registr/reg.png" alt="">
+        <img src="img/registr/reg.png" alt="">
       </div><!--Section-->
 
     </div><!--Registration-->
   </div><!--Container-->
 
   <div>
-    <img class="bg__img" src="../img/4.png" alt="">
+    <img class="bg__img" src="img/4.png" alt="">
   </div>
 
 
@@ -141,19 +141,19 @@
     <h1 id="contacts" class="title title__c">Контакты</h1>
     <div class="contacts">
       <div class="contact">
-        <img class="icon" src="../icons/telephone.png" alt="">
+        <img class="icon" src="icons/telephone.png" alt="">
         <a href="tel:+382 68 381 048" target="_blank">+382 68 381 048</a>
       </div><!--Contact-->
       <div class="contact">
-        <img class="icon" src="../icons/email.png" alt="">
+        <img class="icon" src="icons/email.png" alt="">
         <a href="mailto:lingualab.me@gmail.com" target="_blank">lingualab.me@gmail.com</a>
       </div><!--Contact-->
       <div class="contact">
-        <img class="icon" src="../icons/inst.png" alt="">
+        <img class="icon" src="icons/inst.png" alt="">
         <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
       </div><!--Contact-->
       <div class="contact whatsapp">
-        <img class="icon" src="../icons/whats app.png" alt="">
+        <img class="icon" src="icons/whats app.png" alt="">
         <a href="https://api.whatsapp.com/send?phone=79625801008" target="_blank">+7 962 580 10 08</a>
       </div><!--Contact-->
     </div><!--Contacts-->
@@ -162,7 +162,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="app.js"></script>
+  <script src="main/app.js"></script>
 
 </body>
 </html>
