--- a/school/registration/registration.html
+++ b/school/registration/registration.html
@@ -10,7 +10,7 @@
 <body>
   <div class="box">
     <img src="../icons/ling.png" alt="">
-    <form id="ajax-contact-form" enctype="application/x-www-form-urlencoded" method="post">
+    <form id="ajax-contact-form" enctype="multipart/form-data" method="post">
         <div class="form-group">
           <label for="nameFF">Имя:</label>
           <input id="nameFF" name="nameFF" type="text" required>
@@ -22,7 +22,7 @@
         <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
       </form>
   </div>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
