--- a/school/index.html
+++ b/school/index.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>LinguaLab</title>
-  <link rel="icon" href="../icons/LinguaLab.png">
-
+  <link rel="icon" href="icons/LinguaLab.png">
 <script src="app.js"></script>
 
 </head>
