--- a/school/registration/registration.html
+++ b/school/registration/registration.html
@@ -22,7 +22,7 @@
         <div class="formname">
           <input id="checkbox" type="checkbox" name="checkbox" onchange="document.getElementById('submitFF').disabled = !this.checked;" />
           <label for="checkbox">Согласен на обработку <a href="">персональных данных</a></label>    
-      </div>
+        </div><br>
         <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
     </form>
   </div>
