--- a/school/index.html
+++ b/school/index.html
@@ -48,14 +48,14 @@
         <img src="img/about us/about_3.png" alt="">
         <div class="text">
           <p class="text__r">
-           LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы разработали собственную программу для того, чтобы вы смогли изучать английский язык в понятной и интересной форме. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab. </p>
+           LinguaLab - современный онлайн клуб английского языка в Черногории для детей и взрослых. Наша команда состоит из талантливых и энергичных преподавателей из разных стран мира. Вместе мы подобрали интересную программу, чтобы вы смогли развить навыки английского языка как можно лучше. Сотни текстов на различные познавательные темы, подробное объяснение правил, закрепительные упражнения и веселые игры - всё это есть в LinguaLab. </p>
         </div>
       </div><!--Section-->
       <div class="section">
         <div class="text">
           <p class="text__l">		
             В нашей команде работают преподаватели, которые специализируются в обучении английскому, как второму языку. Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др. 
-            Все наши преподаватели русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
+            Все наши сотрудники русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
             </p>
         </div>
         <img src="img/about us/about_2.png" alt="">
@@ -79,7 +79,7 @@
       <h1 id="groups" class="title">Группы онлайн курсов</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l">		Онлайн обучение доступно для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем до 6 человек):</p><br>
+          <p class="text__l">		Онлайн занятия доступны для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем до 6 человек):</p><br>
           <p class="text__l text__ll">С русскоязычным преподавателем:</p><br>
           <ul>
             <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
