--- a/school/registration/registration.html
+++ b/school/registration/registration.html
@@ -23,7 +23,7 @@
           <input id="contactFF" name="contactFF" type="email" required>
         </div>
         <div class="formname">
-          <input id="checkbox" type="checkbox" name="checkbox" onchange="check()"/>
+          <input id="checkbox" type="checkbox" name="checkbox" checked  onchange="check()"/>
           <label for="checkbox">Согласен на обработку <a href="">персональных данных</a></label>    
         </div><br>
         <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
