--- a/school/index.html
+++ b/school/index.html
@@ -54,7 +54,8 @@
       <div class="section">
         <div class="text">
           <p class="text__l">		
-            В нашей команде работают преподаватели, которые специализируются в обучении английскому, как второму языку. Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др. 
+            В нашей команде работают преподаватели, которые специализируются в обучении английскому, как второму языку. Многие имеют опыт работы со студентами из разных стран, таких как Япония, Южная Корея, Монголия, Россия, Черногория и др. </p><br>
+            <p class="text__l">
             Все наши сотрудники русскоязычные, поэтому они с легкостью смогут объяснить грамматические правила и новые слова начинающим. Если же студент обладает достаточным уровнем знания языка — занятие проходит полностью на английском.
             </p>
         </div>
@@ -79,7 +80,7 @@
       <h1 id="groups" class="title">Группы онлайн курсов</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l">		Онлайн занятия доступны для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем до 6 человек):</p><br>
+          <p class="text__l">		Онлайн занятия доступны для жителей всех городов Черногории. У нас открыто 9 основных программ групповых курсов (с русскоязычным преподавателем; до 6 человек):</p><br>
           <p class="text__l text__ll">С русскоязычным преподавателем:</p><br>
           <ul>
             <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
