--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -154,7 +154,7 @@
         <div class="titles">
           <h3 class="title__item">Курс и банки</h3>
         </div>
-        <iframe class="bank__frame" scrolling="no" src="https://fortrader.org/informers/getInformer?st=11&cat=7&title=%D0%9A%D1%83%D1%80%D1%81%D1%8B%20%D0%B2%D0%B0%D0%BB%D1%8E%D1%82%20%D0%A6%D0%91%20%D0%A0%D0%A4&texts=%7B%22toolTitle%22%3A%22%D0%92%D0%B0%D0%BB%D1%8E%D1%82%D0%B0%22%2C%22todayCourse%22%3A%22RUB%22%2C%22tomorrowCourse%22%3A%22%D0%97%D0%B0%D0%B2%D1%82%D1%80%D0%B0%22%7D&mult=1&showGetBtn=0&hideHeader=0&hideDate=0&w=0&codes=1&colors=false&items=2%2C21&columns=todayCourse%2CtomorrowCourse&toCur=11111"></iframe>
+        <iframe style="width:100%;border:0;overflow:hidden;background-color:transparent;height:235px" scrolling="no" src="https://fortrader.org/informers/getInformer?st=1&cat=7&title=%D0%9A%D1%83%D1%80%D1%81%D1%8B%20%D0%B2%D0%B0%D0%BB%D1%8E%D1%82%20%D0%A6%D0%91%20%D0%A0%D0%A4&texts=%7B%22toolTitle%22%3A%22%D0%92%D0%B0%D0%BB%D1%8E%D1%82%D0%B0%22%2C%22todayCourse%22%3A%22RUB%22%2C%22tomorrowCourse%22%3A%22%D0%97%D0%B0%D0%B2%D1%82%D1%80%D0%B0%22%7D&mult=1&showGetBtn=0&hideHeader=0&hideDate=0&w=0&codes=1&colors=titleTextColor%3D222222%2CtitleBackgroundColor%3Dfff%2CthTextColor%3D454545%2CthBackgroundColor%3Dfff%2CsymbolTextColor%3D454545%2CtableTextColor%3D454545%2CborderTdColor%3De8e8e8%2CtableBorderColor%3De8e8e8%2CprofitTextColor%3D89bb50%2CprofitBackgroundColor%3Deaf7e1%2ClossTextColor%3Dff1616%2ClossBackgroundColor%3Df6e1e1%2CoddBackgroundTrColor%3Dfff%2CevenBackgroundTrColor%3Dfff%2CdataTextColor%3D787878%2CdataBackgroundColor%3Dfff%2CinformerLinkTextColor%3D5e5e5e%2CinformerLinkBackgroundColor%3Df1f1f1&items=2%2C21&columns=todayCourse%2CtomorrowCourse&toCur=11111"></iframe>
       </div>
 
         <!--Cars
@@ -182,7 +182,7 @@
                 <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
                 <div class="card__picture">
                   <img src="img/cars/car.jpeg" alt="">
-                </div>
+                </div>           
                 <div class="card__title">Buggati Chiron</div>
                 <div class="card__price">10 000 000$</div>
               </div><!--Card-->
