--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -9,7 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="slider.css">
   <script src="javascript/auto.js"></script>
+  <script src="javascript/boats.js"></script>
+  <script src="javascript/realties.js"></script>
 </head>
 
 <body>
@@ -318,13 +321,16 @@
             <h2 class="section__title">
               <a href="">Лодки</a></h2>
             <div class="section__items">
-              <a class="section__item">Катера</a>
-              <a class="section__item">Яхты</a>
-              <a class="section__item">Запчасти</a>
+              <a id="launchs" class="section__item" onclick="launch()">Катера</a>
+              <a id="yachts" class="section__item" onclick="yacht()">Яхты</a>
+              <a id="boat_spares" class="section__item" onclick="boat_spare()">Запчасти</a>
             </div>
           </div><!--section_header-->
 
-          <div class="cards__display cards__boats">
+          <!--Launch
+            =============================
+          -->
+          <div id="launch" class="cards__display cards__launch">
             <div class="cards">
 
               <div class="card">
@@ -361,6 +367,96 @@
                 </div>
                 <div class="card__title">Моторная Лодка</div>
                 <div class="card__price">10 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
+
+          <!--Yacht
+            =============================
+          -->
+          <div id="yacht" class="cards__display cards__yacht">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://ru.azimutyachts.me/sale/300000-1000000.html" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/yaht.jpeg" alt="">
+                </div>
+                <div class="card__title">Яхта</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://ru.azimutyachts.me/sale/300000-1000000.html" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/yaht.jpeg" alt="">
+                </div>
+                <div class="card__title">Яхта</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://ru.azimutyachts.me/sale/300000-1000000.html" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/yaht.jpeg" alt="">
+                </div>
+                <div class="card__title">Яхта</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://ru.azimutyachts.me/sale/300000-1000000.html" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/yaht.jpeg" alt="">
+                </div>
+                <div class="card__title">Яхта</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
+
+          <!--Boatspares
+            =============================
+          -->
+          <div id="boat_spare" class="cards__display cards__boatspares">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://www.technomarin.ru/index.php?route=product/category&path=220" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/spare.jpeg" alt="">
+                </div>
+                <div class="card__title">Запчасти</div>
+                <div class="card__price">1 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.technomarin.ru/index.php?route=product/category&path=220" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/spare.jpeg" alt="">
+                </div>
+                <div class="card__title">Запчасти</div>
+                <div class="card__price">1 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.technomarin.ru/index.php?route=product/category&path=220" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/spare.jpeg" alt="">
+                </div>
+                <div class="card__title">Запчасти</div>
+                <div class="card__price">1 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.technomarin.ru/index.php?route=product/category&path=220" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/spare.jpeg" alt="">
+                </div>
+                <div class="card__title">Запчасти</div>
+                <div class="card__price">1 000$</div>
               </div><!--Card-->
 
             </div><!--cards-->
@@ -377,13 +473,17 @@
             <h2 class="section__title">
               <a href="">Недвижимость</a></h2>
             <div class="section__items">
-              <a class="section__item">Аренда</a>
-              <a class="section__item">Покупка</a>
-              <a class="section__item">Продажа</a>
+              <a id="rents" class="section__item" onclick="rent()">Аренда</a>
+              <a id="pushares"
+              class="section__item" onclick="pushare()">Покупка</a>
+              <a id="sells" 
+              class="section__item" onclick="sell()">Продажа</a>
             </div>
           </div><!--section_header-->
 
-          <div class="cards__display cards__rent">
+          <!--Rent
+          =============================-->
+          <div id="rent" class="cards__display cards__rent">
             <div class="cards">
 
               <div class="card">
@@ -392,7 +492,7 @@
                   <img src="img/realty/apartment.jpeg" alt="">
                 </div>
                 <div class="card__title">2-к квартира</div>
-                <div class="card__price">100 000$</div>
+                <div class="card__price">1 000$</div>
               </div><!--Card-->
 
               <div class="card">
@@ -401,7 +501,7 @@
                   <img src="img/realty/apartment.jpeg" alt="">
                 </div>
                 <div class="card__title">2-к квартира</div>
-                <div class="card__price">100 000$</div>
+                <div class="card__price">1 000$</div>
               </div><!--Card-->
 
               <div class="card">
@@ -410,7 +510,7 @@
                   <img src="img/realty/apartment.jpeg" alt="">
                 </div>
                 <div class="card__title">2-к квартира</div>
-                <div class="card__price">100 000$</div>
+                <div class="card__price">1 000$</div>
               </div><!--Card-->
 
               <div class="card">
@@ -419,16 +519,160 @@
                   <img src="img/realty/apartment.jpeg" alt="">
                 </div>
                 <div class="card__title">2-к квартира</div>
+                <div class="card__price">1 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
+
+          <!--Pushare
+          =============================-->
+          <div id="pushare" class="cards__display cards__pushare">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/pushare.jpeg" alt="">
+                </div>
+                <div class="card__title">1-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/pushare.jpeg" alt="">
+                </div>
+                <div class="card__title">1-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/pushare.jpeg" alt="">
+                </div>
+                <div class="card__title">1-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/pushare.jpeg" alt="">
+                </div>
+                <div class="card__title">1-к квартира</div>
                 <div class="card__price">100 000$</div>
               </div><!--Card-->
 
             </div><!--cards-->
           </div><!--cards__display-->
+
+          <!--Sell
+          =============================-->
+          <div id="sell" class="cards__display cards__sell">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+                <div class="card__title">3-к квартира</div>
+                <div class="card__price">200 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+                <div class="card__title">3-к квартира</div>
+                <div class="card__price">200 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+                <div class="card__title">3-к квартира</div>
+                <div class="card__price">200 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+                <div class="card__title">3-к квартира</div>
+                <div class="card__price">200 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
+
         </div><!--Container-->
       </div>
         <!--Food
         =========================-->
-      <div id="food" class="food">Вкусные места</div>
+      <div id="food" class="food">
+        <div class="container">
+          <div class="section_header">
+            <h2 class="section__title">
+              <a href="">Вкусные места</a></h2>
+          </div><!--section_header-->
+
+          <div class="slider">
+            <div class="slide-track">
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+              </div>
+              <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+              </div>
+            </div>
+          </div>
+
+        </div><!--Container-->
+      </div><!--Food-->
         <!--Job
         =========================-->
       <div id="job" class="job">Работа</div>
