--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -319,7 +319,7 @@
 
           <div class="section_header">
             <h2 class="section__title">
-              <a href="">Лодки</a></h2>
+              <a href="">Водный транспорт</a></h2>
             <div class="section__items">
               <a id="launchs" class="section__item" onclick="launch()">Катера</a>
               <a id="yachts" class="section__item" onclick="yacht()">Яхты</a>
@@ -618,60 +618,11 @@
         <!--Food
         =========================-->
       <div id="food" class="food">
-        <div class="container">
           <div class="section_header">
             <h2 class="section__title">
               <a href="">Вкусные места</a></h2>
           </div><!--section_header-->
 
-          <div class="slider">
-            <div class="slide-track">
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-              </div>
-              <div class="slide">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-              </div>
-            </div>
-          </div>
-
-        </div><!--Container-->
       </div><!--Food-->
         <!--Job
         =========================-->
@@ -684,14 +635,14 @@
       <div id="poster" class="poster">Афиша</div>
         <!--Polyclinics
         =========================-->
-      <div id="polyclinics" class="polyclinics">Поликлиники</div>
+      <div id="polyclinics" class="polyclinics">Медицина</div>
         <!--Advertising
         =========================-->
       <div 
     class="advertising">Реклама</div>
         <!--Advertising-2
         =========================-->
-      <div class="advertising-2">Реклама-2</div>
+      <div class="advertising-2"><h2>Реклама-2</h2></div>
 
       <!--Navig_Left
       ===========================-->
@@ -701,13 +652,13 @@
             <li><a href="#weather">Погода</a></li>
             <li><a href="#banks">Курс и банки</a></li>
             <li><a href="#car__moto">Авто и Мото</a></li>
-            <li><a href="#boats">Лодки</a></li>
+            <li><a href="#boats">Водный транспорт</a></li>
             <li><a href="#realty">Недвижимость</a></li>
             <li><a href="#food">Вкусные места</a></li>
             <li><a href="#job">Работа</a></li>
             <li><a href="#transport">Транспорт</a></li>
             <li><a href="#poster">Афиша</a></li>
-            <li><a href="#polyclinics">Поликлиники</a></li>
+            <li><a href="#polyclinics">Медицина</a></li>
           </ul>
       </div><!--Navig-->
   </div>
