--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -10,9 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="slider.css">
+  <link
+  rel="stylesheet"
+  type="text/css"
+  href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <script src="javascript/slider.js"></script>
   <script src="javascript/auto.js"></script>
   <script src="javascript/boats.js"></script>
   <script src="javascript/realties.js"></script>
+
 </head>
 
 <body>
@@ -623,6 +629,70 @@
               <a href="">Вкусные места</a></h2>
           </div><!--section_header-->
 
+          <!--Slider
+          =============================-->
+          <div class="slider__display">
+            <div class="sliders">
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                    <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+              <div class="slider">
+                <a class="slider__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="slider__picture">
+                  <h3>Вкусно</h3>
+                  <img src="img/realty/sell.jpeg" alt="">
+                </div>
+              </div><!--Slider-->
+
+            </div><!--Slider-->
+          </div><!--Slider__display-->
+        
       </div><!--Food-->
         <!--Job
         =========================-->
@@ -664,5 +734,8 @@
   </div>
 </div> <!--Container-->
 
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="javascript/slider.js"></script>
 </body>
 </html>
