--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -8,8 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="slider.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/slider.css">
+  <link rel="stylesheet" href="styles/carousel.css">
   <link
   rel="stylesheet"
   type="text/css"
@@ -470,6 +471,60 @@
 
         </div><!--Container-->
       </div>
+
+       <!--Advertising-3
+            =============================
+          -->
+
+      <div class="advertising-3">
+        <div class="slide">
+          <div class="slide-track">
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slides">
+              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
        <!--Realty
         =========================-->
       <div id="realty" class="realty">
@@ -696,7 +751,20 @@
       </div><!--Food-->
         <!--Job
         =========================-->
-      <div id="job" class="job">Работа</div>
+      <div id="job" class="job">
+        <div class="section_header">
+          <h2 class="section__title">
+            <a href="">Работа</a></h2>
+          <div class="section__items">
+            <a class="vacancies">Все вакансии</a>
+          </div>
+        </div><!--section_header-->
+
+        <div class="job__item">
+          
+        </div>
+
+      </div><!--Job-->
         <!--Transport
         =========================-->
       <div id="transport" class="transport">Транспорт</div>
